<resources>
    <string name="app_name">podcast</string>
    <string name="hint">Search for Podcasts</string>
    <string name="search">Search</string>
    <string name="recommended_for_you">Recommended for you</string>
    <string name="new_playlist">New Playlist</string>
    <string name="create_new_playlist">Create New Playlist</string>
    <string name="your_playlists">Your Playlists</string>
    <string name="Delete">Delete Playlist</string>
    <string name="add_to_playlist">Add to playlist</string>

    <!-- Menu text -->
    <string name="menu_search">Search</string>
    <string name="menu_subs">Subscribed \nChannels</string>
    <string name="menu_playlists">Playlists</string>
    <string name="menu_allEps">All \nEpisodes</string>
    <string name="menu_channels">All \nChannels</string>
    <string name="menu_back_to_home">Back to Homepage</string>
    <string name="menu_create_new_playlist">Create New Playlist</string>

    <!-- card sizes -->
    <string name="cardWidth">275dp</string>
    <string name="cardHeight">100dp</string>

    <!-- Stackoverflow says these need to exist so the interface works -->
    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <string name="title_activity_play_content">playContent</string>
    <string name="title_activity_searchable">SearchableActivity</string>
</resources>
