<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="comp3350.podcast.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:text="@string/recommended_for_you"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="0dp"
        android:layout_height="93dp"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:layout_weight="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:id="@+id/recLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:id="@+id/body"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:paddingEnd="2dp"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:paddingStart="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/menuButtons"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView">

        <fragment
            android:id="@+id/placeHolder"
            android:name="android.app.ListFragment"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/your_playlists" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/playlistsLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:orientation="vertical">

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/newPlaylist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="#b9ea9a"
            android:text="@string/create_new_playlist" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/menuButtons"
        android:layout_width="99dp"
        android:layout_height="442dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView">

        <Button
            android:id="@+id/searchButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_search" />

        <Button
            android:id="@+id/subsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_subs" />

        <Button
            android:id="@+id/playlistsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_playlists" />

        <Button
            android:id="@+id/allButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_allEps" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
